Fix issues with images on mobile devices.

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -142,27 +142,97 @@
   z-index: 3;
 }
 
-.blockchain-image {
-  background-image: url('./heroImages/blockchain.jpg');
+// @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait) {}
+// @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {}
+// @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {}
+// @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {}
+// @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation : portrait) {}
+@media (min-device-width: 370px) and (max-device-width: 667px) {
+  .blockchain-image {
+    background-image: url('./heroImages/blockchain-375-cw90.jpg');
+    background-position: center;
+    background-position: top;
+    background-size: cover;
+    height: 670px;
+  }
+  .eos-sf-pano {
+    background-image: url('./heroImages/eos-sf-pano-480.jpg');
+    background-position: center;
+  }
+  .react-code-screen {
+    background-image: url('./heroImages/react-code-atom-480.png');
+    background-position: center;
+    background-size: cover;
+    height: 400px;
+  }
+  .iron-yard-glass {
+    background-image: url('heroImages/iron-yard-glass-480.jpg');
+    background-position: center;
+    background-size: cover;
+    height: 640px;
+  }
 }
-.eos-sf-pano {
-  background-image: url('./heroImages/eos-sf-pano.jpeg');
-  background-position: center;
+@media screen only (min-device-width: 370px) and (max-device-width: 667px) {
+  .blockchain-image {
+    background-image: url('./heroImages/blockchain-375-cw90.jpg');
+    background-position: center;
+    background-position: top;
+    background-size: cover;
+    height: 670px;
+  }
+  .eos-sf-pano {
+    background-image: url('./heroImages/eos-sf-pano-480.jpg');
+    background-position: center;
+  }
+  .react-code-screen {
+    background-image: url('./heroImages/react-code-atom-480.png');
+    background-position: center;
+    background-size: cover;
+    height: 400px;
+  }
+  .iron-yard-glass {
+    background-image: url('heroImages/iron-yard-glass-480.jpg');
+    background-position: center;
+    background-size: cover;
+    height: 640px;
+  }
 }
+// @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (orientation : portrait) {}
+// @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (orientation : landscape) {}
+
+@media (min-device-width: 667px) {
+  .hero-img {
+    height: 92vh;
+  }
+  .blockchain-image {
+    background-image: url('./heroImages/blockchain.jpg');
+    background-position: center;
+    background-attachment: fixed;
+  }
+  .eos-sf-pano {
+    background-image: url('./heroImages/eos-sf-pano.jpeg');
+    background-position: center;
+    background-attachment: fixed;
+  }
+  .react-code-screen {
+    background-image: url('./heroImages/react-code-atom.png');
+    background-position: center;
+    background-attachment: fixed;
+  }
+  .iron-yard-glass {
+    background-image: url('heroImages/iron-yard-glass.jpg');
+    background-position: center;
+    background-attachment: fixed;
+  }
+}
+
 .heroImg3 {
   background-image: url('./heroImages/IMG_0206.jpg');
 }
-.iron-yard-glass {
-  background-image: url('heroImages/IMG_0138.jpg');
-  background-position: center;
-}
 .hero-img {
-  height: 92vh;
   width: 100vw;
   background-repeat: no-repeat;
-  // background-position: top;
   background-size: cover;
-  background-attachment: fixed;
   z-index: 1;
   display: table-cell;
   vertical-align: middle;
@@ -178,7 +248,7 @@
 .pano-image {
   width: 100%;
   height: auto;
-  margin-left: -20px;
+  // margin-left: -20px;
 }
 .title-bar {
   height: auto;
@@ -484,6 +554,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding-inline-start: 0;
     .skill {
       width: 100px;
       margin: 0 5px -20px 5px;
